--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/preset-react": "^7.12.7",
     "@babel/runtime": "^7.12.5",
     "babel-loader": "^8.2.2",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "chalk": "^4.1.0",
     "copy-webpack-plugin": "^6.3.2",
     "cpy-cli": "^3.1.1",
