--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "framework7-icons": "^3.0.1",
     "framework7-react": "^5.7.14",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
