--- a/package.json
+++ b/package.json
@@ -24,19 +24,16 @@
     "Samsung >= 5"
   ],
   "dependencies": {
-    "dateformat": "^4.0.0",
+    "@supabase/supabase-js": "^1.0.7",
     "dom7": "^2.1.5",
-    "dotenv": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
     "framework7": "^5.7.14",
     "framework7-icons": "^3.0.1",
     "framework7-react": "^5.7.14",
     "lodash": "^4.17.20",
-    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-moment": "^1.0.0",
     "template7": "^1.4.2"
   },
   "devDependencies": {
