--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@supabase/supabase-js": "^1.0.7",
     "dom7": "^2.1.5",
     "dotenv-webpack": "^6.0.0",
+    "firebase": "^8.2.0",
+    "firebaseui": "^4.7.1",
     "framework7": "^5.7.14",
     "framework7-icons": "^3.0.1",
     "framework7-react": "^5.7.14",
