--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dom7": "^2.1.5",
     "dotenv-webpack": "^6.0.0",
     "firebase": "^8.2.0",
+    "firebase-admin": "^9.4.2",
     "firebaseui": "^4.7.1",
     "framework7": "^5.7.14",
     "framework7-icons": "^3.0.1",
